feat: criando as entidades, DTO's e ajustando os testes